--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <title>I Love U</title>
+    <title> Love </title>
     <link type="text/css" rel="stylesheet" href="./love/default.css"/>
 
     <script type="text/javascript" src="./love/jquery.min.js"></script>
