--- a/index.html
+++ b/index.html
@@ -33,16 +33,14 @@
             <div id="text">
                 <div id="code">
                     <p>
-                        <font color="#FF0000">
+                         <font color="#FF0000">
                             <span class="say"> Dear coco, I love you 🫶🏻❤️</span><br/>
                             <span class="say"> You are the love of my life  </span><br/>
                             <span class="say"> </span><br/>
                             <span class="say"> I know I'm lazy</span><br/>
                             <span class="say">I always reply you late,  </span><br/>
                             <span class="say"> </span><br/>
-                            <span class="say"> But trust me you are the only person I always wanted to talk to </span><br/>
-                            <span class="say">Talking with you makes my entire day bright 🌝💐</span><br/>
-                            <span class="say"> Our togetherness is a blessing I cherish every day 🤞🏻🫂</span><br/>
+                            <span class="say"> But trust me you are the only person I always wanted to talk to 🌝💐</span><br/>
                             <span class="say"> Still waiting for that day when I will  </span><br/>
                             <span class="say"> Be a grown man who can take good care of you, my love 🥹❤️😇</span><br/>
                             <span class="say"> </span><br/>
@@ -50,10 +48,7 @@
                             <span class="say"> Thank you for your thoughtfulness for so long</span><br/>
                             <span class="say"> </span><br/>
                             <span class="say"> Love you forever, my Sweetheart 💖🔐♛🧿</span><br/>
-                            <span class="say"> </span><br/>
-                            <span class="say"> (*^__^*) hours</span><br/>
-                            <span class="say"> </span><br/>
-                            <span class="say"><span class="space"></span> minutes</span>
+                            <span class="say"> (*^__^*)</span><br/>
                         </font>
                     </p>
                 </div>
